# Expression

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.py  make_readme.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  versioneer.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml  readme-sync.yml
.pre-commit-hooks/: prevent-readme-edits.sh
docs/: _config.yml  _toc.yml  conf.py  index.html  intro.md  markdown.md  requirements.txt
docs/expression/: index.html
docs/expression/builder/: index.html  option.html  result.html
docs/expression/collections/: asyncseq.html  frozenlist.html  index.html  map.html  maptree.html  seq.html  test4.html
docs/expression/core/: aio.html  aiotools.html  builder.html  choice.html  curry.html  error.html  fn.html  index.html  mailbox.html  misc.html  option.html  result.html  result_try.html  test.html  test2.html  try_.html  typing.html
docs/expression/effect/: index.html  option.html  result.html
docs/expression/extra/: index.html
docs/expression/extra/option/: index.html  pipeline.html
docs/expression/extra/result/: index.html  pipeline.html  traversable.html
docs/expression/system/: cancellation.html  disposable.html  error.html  index.html
docs/fslash/: index.html
docs/fslash/builder/: index.html  option.html  result.html
docs/fslash/builders/: builder.html  index.html  option.html  result.html
docs/fslash/collections/: index.html  list.html  seq.html
docs/fslash/core/: aio.html  async_.html  builder.html  curry.html  error.html  index.html  mailbox.html  misc.html  option.html  result.html
docs/fslash/extra/: index.html
docs/fslash/extra/option/: index.html  kleisli.html  pipeline.html
docs/fslash/extra/result/: index.html  kleisli.html  pipeline.html  traversable.html
docs/fslash/system/: cancellation.html  disposable.html  error.html  index.html
docs/reference/: array.md  block.md  compose.md  curry.md  frozenlist.md  mailbox.md  map.md  misc.md  option.md  pipe.md  pipeline.md  reference.md  result.md  seq.md  try.md  union.md
docs/tutorial/: containers.md  continuations.md  data_modelling.md  effects.md  error_handling.md  introduction.md  lambda_calculus.md  optional_values.md  railway.md  tutorial.md
examples/pandas/: program.py
expression/: __init__.py  _version.py
expression/builder/: __init__.py  option.py  result.py  seq.py
expression/collections/: __init__.py  array.py  asyncseq.py  block.py  frozenlist.py  map.py  maptree.py  non_empty_block.py  seq.py
expression/core/: __init__.py  aio.py  aiotools.py  async_builder.py  builder.py  choice.py  compose.py  curry.py  error.py  fn.py  mailbox.py  match.py  misc.py  option.py  pipe.py  result.py  result_try.py  tagged_union.py  try_.py  typing.py  union.py
expression/effect/: __init__.py  async_option.py  async_result.py  option.py  result.py  seq.py
expression/extra/: __init__.py  parser.py
expression/extra/option/: __init__.py  apply.py  pipeline.py
expression/extra/option/apply/: __init__.py  main.py
expression/extra/result/: __init__.py  apply.py  catch.py  pipeline.py  traversable.py
expression/extra/result/apply/: main.py
expression/fable/: README.md  __init__.py  list.py  reflection.py  string.py  types.py  util.py
expression/system/: __init__.py  cancellation.py  disposable.py  error.py  numeric.py  reflection.py  types.py  util.py
fslash/: __init__.py  _version.py  compose.py  curry.py  option.py  pipe.py  result.py  seq.py
fslash/builder/: __init__.py  option.py  result.py
fslash/builders/: __init__.py  builder.py  option.py  result.py  seq.py
fslash/collections/: __init__.py  list.py  seq.py
fslash/core/: __init__.py  aio.py  async_.py  builder.py  compose.py  curry.py  error.py  mailbox.py  misc.py  option.py  pipe.py  result.py
fslash/extra/: __init__.py
fslash/extra/option/: kleisli.py  pipeline.py
fslash/extra/result/: __init__.py  kleisli.py  pipeline.py  traversable.py
fslash/system/: __init__.py  cancellation.py  disposable.py  error.py
notebooks/: 01 - Introduction.ipynb  01 - Introduction.md  02 - Containers.ipynb  02 - Containers.md  03 - Lambda Calculus.ipynb  03 - Lambda Calculus.md  04 - Optional Values.ipynb  04 - Optional Values.md  05 - Railway Oriented Programming.ipynb  05 - Railway Oriented Programming.md  06 - Effects and Side-Effects.ipynb  06 - Effects and Side-Effects.md  Options.ipynb
oryx/: README.md  __init__.py  context.py  fetch.py  handler.py  pipeline.py
oryx/examples/: app.py
tests/: test_apply.py  test_array.py  test_async_option_builder.py  test_async_result_builder.py  test_asyncseq.py  test_block.py  test_cancellation.py  test_catch.py  test_choice.py  test_compose.py  test_curried.py  test_disposable.py  test_fn.py  test_frozenlist.py  test_gen.py  test_list.py  test_mailbox.py  test_map.py  test_match.py  test_misc.py  test_non_empty_block.py  test_option.py  test_option_builder.py  test_option_effect.py  test_parser.py  test_pipe.py  test_pydantic.py  test_result.py  test_result_builder.py  test_seq.py  test_seq_builder.py  test_tagged_union.py  test_try.py  test_typing.py  test_union.py  utils.py
